# eval-hub-local-demo

./: .gitignore  evalhub-client.ipynb  main.py  pyproject.toml  readme.md
config/: config.yaml
config/providers/: c_provider1.yaml  local_lighteval.yaml
