[project]
name = "eval-hub-local-demo"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Framework of choice
    # LightEval framework
    "lighteval==0.13.0",
    # LiteLLM for endpoint support
    "litellm[caching]==1.80.17",

    # Eval-hub SDK for framework adapter pattern
    "eval-hub-sdk[adapter]==0.1.0a9",
    # "mlflow-skinny==3.10.0rc0",
    # temp: manually installed server binary
    "eval-hub-server==0.1.0a0",
]

[tool.uv.sources]
eval-hub-server = { path = "/Users/gnaulak/workspace/gitrepos/eval-hub/python-server/dist/eval_hub_server-0.1.0a0-py3-none-macosx_11_0_arm64.whl" }
eval-hub-sdk = { path = "/Users/gnaulak/workspace/gitrepos/eval-hub-sdk/dist/eval_hub_sdk-0.1.0a9-py3-none-any.whl" }
