[project]
name = "eval-hub-local-demo"
version = "0.0.2"
requires-python = ">=3.12"
dependencies = [
    # Framework of choice
    # LightEval framework
    "lighteval==0.13.0",
    # LiteLLM for endpoint support
    "litellm[caching]==1.80.17",

    # Eval-hub SDK for framework adapter pattern
    "eval-hub-sdk[adapter]==0.1.5",
    "eval-hub-server>=0.3.0.dev269",
]

[project.optional-dependencies]
demo = [
    "mlflow>=3.11.1",
    "ipykernel>=7.2.0",
    "oras>=0.2.41"
]

[tool.uv.sources]
eval-hub-server = { index = "testpypi" }

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
explicit = true
